can view on the blowser

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development ./eth_ec_server/frontend/src/index.js --output ./eth_ec_server/frontend/static/frontend/main.js",
+    "dev": "webpack --config webpack.config.js --mode development ./eth_ec_server/frontend/src/index.js --output ./eth_ec_server/frontend/static/frontend/main.js",
     "build": "webpack --mode production ./eth_ec_server/frontend/src/index.js --output ./eth_ec_server/frontend/static/frontend/main.js",
     "flush": "pipenv run python ./project/manage.py flush --no-input",
     "e2e": "cypress open --project ./project/frontend/"
