add aws eb settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 node_modules/
 amazon_cookies.json
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
