fix cors by adding 'datatype' to whitelist. fix 500 in payInAmazon. but can't buy gift.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework = "*"
 pillow = "*"
 mysqlclient = "*"
 web3 = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.6"
