--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./nginx/conf:/etc/nginx/conf.d
       - ./nginx/uwsgi_params:/etc/nginx/uwsgi_params
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
       - ./eth_ec_server/static:/static
     depends_on:
       - web
