--- a/nginx/conf/eth_ec_server_nginx.conf
+++ b/nginx/conf/eth_ec_server_nginx.conf
@@ -23,5 +23,7 @@ server {
     location / {
         uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
+        auth_basic "input id and pass"; # 認証時に表示されるメッセージ
+        auth_basic_user_file /etc/nginx/.htpasswd; # .htpasswdファイルパス
     }
 }
